# mrc-level2-nlp-13

./: .gitignore  .pre-commit-config.yaml  Custom.py  arguments.py  cnn_header.py  custom_train.py  custom_trainer.py  dense_retrieval_train.py  hard_vote.ipynb  inference.py  nohup.out  post_preprocessing.ipynb  pyproject.toml  quesiton_generate.py  readme.md  retrieval.py  train.py  train_reader.py  utils_qa.py  visualization.py
.github/: PULL_REQUEST_TEMPLATE.md 
.ipynb_checkpoints/: cnn_header-checkpoint.py
augmentation/: quesiton_generate.py
configs/: example.json
ensemble/: bert-base_bm25_prediction.json  bert-base_bm25_prediction_v2.json  bert-base_tfidf_prediction.json  bert-base_tfidf_prediction_v2.json  bm_koelectra_predictions.json  dense-roberta-10.json  dense-roberta-3.json  ensemble.json  es_koelectra_v2_predictions.json  es_robert-large_predictions.json  hard_vote.ipynb  king.json  koelectra_es_predictions.json  last_last_check.json  many.json  roberta-bm25-predictions.json  roberta5_cnn_bm_prediction.json  roberta5_cnn_sp_prediction.json  roberta_cnn_bm_prediction.json  roberta_cnn_sp_prediction.json
ensemble_result/: 0.687|roberta_cn|roberta-bm|koelectra_|dense-robe|bert-base_|es_koelect|es_robert-.json
model/Reader/: RobertaCnn.py  trainer_qa.py
model/Retrieval/: retrieval.py
retrieval_module/: retrieval_dataset.py  utills.py
utills/: config_setting.py  utills.py
utils/: arguments.py  logger.py  utils_qa.py
utils/dense_utils/: retrieval_dataset.py  utils.py
