[tool.poetry]
name = "mrc-level2-nlp-13"
version = "0.1.0"
description = ""
authors = ["Boostcamp-nlp-13"]

[tool.poetry.dependencies]
python = "^3.7"
transformers = "4.5.0"
datasets = "1.5.0"
tqdm = "4.41.1"
pandas = "1.1.4"
scikit-learn = "0.24.1"
konlpy = "0.5.2"
faiss-gpu = "^1.7.1"
pre-commit = "^2.15.0"
wandb = "^0.12.5"
torch = {url = "https://download.pytorch.org/whl/cu110/torch-1.7.1%2Bcu110-cp38-cp38-linux_x86_64.whl"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.0"

[tool.black]
line-length = 100
target-version = ['py37']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"