[tool.poetry]
name = "mrc"
version = "0.1.0"
description = "team-clue-mrc"
authors = ["Boostcamp-nlp-13"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "4.11"
datasets = "^1.14.0"
tqdm = "^4.62.3"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
konlpy = "^0.5.2"
faiss-gpu = "^1.7.1"
pre-commit = "^2.15.0"
torch = "^1.10.0"
wandb = "^0.12.5"
ipykernel = "^6.4.2"
ipywidgets = "^7.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
